2010-11-08  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14901: Forgotten styling: User Name at the top misses a CSS definition (Thanks to Christopher Stelmaszyk)

2010-11-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16245: htmlArea RTE: When inserting link with IE8, trailing line break is also linked
	* Updated htmlArea RTE version to 2.0.7

2010-11-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15587: Bug: htmlspecialchars called twice (Thanks to Mickel Ricky)
	* Fixed bug #16214: Bug: Change value of Media(Flash) parameter (Thanks to Janos Thiele)

2010-11-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16130: buggy initialization of flash uploader when only certain file extensions are allowed (Thanks to Andreas Kiessling)

2010-11-04  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15656: indexed_search: Template corrections of #14130 not applied to the CSS template (Thanks to Lorenz Ulrich)

2010-11-03  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15995: Bug: doktype limitation is not applied to alternative page languages (pages_language_overlay) (Thanks to Andreas Kiessling)

2010-11-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16175: htmlArea RTE: The path of classesAnchor images are modified when saving

2010-10-29  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15551: [IRRE] Open all child records when opening parent records (Thanks to Sebastian Fischer)
	* Fixed bug #16140: [reports] PHP warning on missing array in reports system extension (Thanks to Rudi Meyer)

2010-10-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16155: t3lib_db::INSERTquery misses a space when generering the INSERT INTO statement

2010-10-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16135: Output of superfluous "&qout;" in title of TCEform icon for record in group of type "db" (Thanks to Sven Juergens)

2010-10-27  Stanislas Rolland  <typo3@sjbr.ca>
